--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arch Studio</title>
     <link rel="stylesheet" href="./styles/main/main.css">
+    <link rel="stylesheet" href="./styles/home/home.css">
 </head>
 <body>
 
@@ -35,8 +36,7 @@
           </div>
 
           <div class='header__button'>
-              <a class='header__open-menu'><img src="./assets/icons/icon-hamburger.svg" /></a>
-              <a class='header__close-menu'><img src="./assets/icons/icon-close.svg" /></a>
+              <img src="./assets/icons/icon-hamburger.svg" />
           </div>
 
         </div>
@@ -44,13 +44,7 @@
 
 
 
-    <!-- Typography -->
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-
-    <p>This is a paragraph</p>
+    
 
     <!-- Button -->
     <a href="/">
@@ -59,6 +53,31 @@
             <img src="./assets/icons/white-icon-arrow.svg" alt="">
         </button>
     </a>
+
+
+
+    <!-- BANNER -->
+    <section class="banner section">
+        <div class="banner__container">
+            <div class="banner__image">
+                <img src="./assets/home/desktop/image-small-team.jpg" alt="">
+            </div>
+            <div class="banner__content">
+                <h3>Small team, big ideas</h3>
+                <a href="/">
+                    <button class="button">
+                        <p>About Us</p> 
+                        <img src="./assets/icons/white-icon-arrow.svg" alt="">
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
 
 
 
@@ -122,6 +141,8 @@
 
         </div>
     </footer>
+
+    <script src="./js/header.js"></script>
 
 </body>
 </html>
