--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
 
 
 
+    <!-- IMAGE + TEXT -->
+    <section class="image-text section">
+        <div class="image-text__container">
+            <div class="headings__container">
+                <h1>Welcome</h1>
+            </div>
+            <div class="texts__container">
+                <h2>Welcome to Arch Studio</h2>
+                <p>We have a unique network and skillset to help bring your projects to life. Our small team of highly skilled individuals combined with our large network put us in a strong position to deliver exceptional results.
+                <br> <br>
+                Over the past 10 years, we have worked on all kinds of projects. From stations to high-rise buildings, we create spaces that inspire and delight.
+                <br> <br>
+                We work closely with our clients so that we understand the intricacies of each project. This allows us to work in harmony the surrounding area to create truly stunning projects that will stand the test of time.</p>
+            </div>
+            <div class="image__container">
+                <img src="./assets/home/desktop/image-welcome.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+
     
 
 
