add featured ribbon

--- a/index.html
+++ b/index.html
@@ -116,12 +116,65 @@
 
 
 
+
+    <!-- FEATURED -->
+    <section class="featured section">
+        <div class="featured__container">
+            <div class="featured__top">
+                <h2>Featured</h2>
+                <button class='button'>
+                    <p>See All</p>
+                    <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
+                </button>
+            </div>
+
+            <div class="featured__items">
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-delsol.png')">
+                    <div class="number">
+                        <h1>1</h1>
+                    </div>
+                    <div class="text__container">
+                        <p class="main">Project Del Sol</p>
+                        <p class="sub">View All Projects</p>
+                    </div>
+                </a>
+
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-tower.png')">
+                    <div class="number">
+                        <h1>2</h1>
+                    </div>
+                    <div class="text__container">
+                        <p class="main">228B Tower</p>
+                        <p class="sub">View All Projects</p>
+                    </div>
+                </a>
+
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-prototype.png')">
+                    <div class="number">
+                        <h1>3</h1>
+                    </div>
+                    <div class="text__container">
+                        <p class="main">Le Prototype</p>
+                        <p class="sub">View All Projects</p>
+                    </div>
+                </a>
+            </div>
+
+            <button class='button mobile'>
+                <p>See All</p>
+                <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
+            </button>
+        </div>
+    </section>
+
+
+
     
 
 
 
     <!-- BANNER -->
-    <section class="banner section">
+    <!-- <section class="banner section">
         <div class="banner__container">
             <div class="banner__image">
                 <img src="./assets/home/desktop/image-small-team.jpg" alt="">
@@ -136,7 +189,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
