Fix herobanner splide pagination

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <div class="splide herobanner__splide" aria-label="Splide Basic HTML Example">
             <div class="splide__track">
                 <ul class="splide__list">
-                    <li class="splide__slide herobanner__slide">
+                    <li class="splide__slide herobanner__slide" data-splide-interval="2000"
+                    style="background-image: url('./assets/home/desktop/image-hero-paramour.jpg')">
                         <div class="headings">
                             <h1>Project Paramour</h1>
                         </div>
@@ -62,7 +63,8 @@
                         </button>
                     </li>
 
-                    <li class="splide__slide herobanner__slide">
+                    <li class="splide__slide herobanner__slide" data-splide-interval="3000"
+                    style="background-image: url('./assets/home/desktop/image-hero-seraph.jpg')">
                         <div class="headings">
                             <h1>Project Paramour</h1>
                         </div>
@@ -75,7 +77,22 @@
                         </button>
                     </li>
 
-                    <li class="splide__slide herobanner__slide">
+                    <li class="splide__slide herobanner__slide" data-splide-interval="3000"
+                    style="background-image: url('./assets/home/desktop/image-hero-federal.jpg')">
+                        <div class="headings">
+                            <h1>Project Paramour</h1>
+                        </div>
+                        <div class="description">
+                            <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern architecture.</p>
+                        </div>
+                        <button class="button">
+                            <p>See our Portfolio</p> 
+                            <img src="./assets/icons/white-icon-arrow.svg" alt="">
+                        </button>
+                    </li>
+
+                    <li class="splide__slide herobanner__slide" data-splide-interval="3000"
+                    style="background-image: url('./assets/home/desktop/image-hero-trinity.jpg')">
                         <div class="headings">
                             <h1>Project Paramour</h1>
                         </div>
