--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
 
 
 
+    <!-- BANNER -->
+    <section class="banner section">
+        <div class="banner__container" style="background-image: url('./assets/home/desktop/team.png');">
+            <div class="banner__content">
+                <h3>Small team, big ideas</h3>
+                <a href="/">
+                    <button class="button">
+                        <p>About Us</p> 
+                        <img src="./assets/icons/white-icon-arrow.svg" alt="">
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <!-- FEATURED -->
     <section class="featured section">
         <div class="featured__container">
@@ -183,36 +201,6 @@
             </button>
         </div>
     </section>
-
-
-
-    
-
-
-
-    <!-- BANNER -->
-    <!-- <section class="banner section">
-        <div class="banner__container">
-            <div class="banner__image">
-                <img src="./assets/home/desktop/image-small-team.jpg" alt="">
-            </div>
-            <div class="banner__content">
-                <h3>Small team, big ideas</h3>
-                <a href="/">
-                    <button class="button">
-                        <p>About Us</p> 
-                        <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                    </button>
-                </a>
-            </div>
-        </div>
-    </section> -->
-
-
-
-
-
-
 
 
 
