--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
                     style="background-image: url('./assets/home/desktop/image-hero-seraph.jpg')">
                         <div class="headings">
-                            <h1>Project Paramour</h1>
+                            <h1>Seraph Station</h1>
                         </div>
                         <div class="description">
-                            <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern architecture.</p>
+                            <p>The Seraph Station project challenged us to design a unique station that would transport people through time. The result is a fresh and futuristic model inspired by space stations.</p>
                         </div>
                         <button class="button">
                             <p>See our Portfolio</p> 
@@ -80,10 +80,10 @@
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
                     style="background-image: url('./assets/home/desktop/image-hero-federal.jpg')">
                         <div class="headings">
-                            <h1>Project Paramour</h1>
+                            <h1>Federal II Tower</h1>
                         </div>
                         <div class="description">
-                            <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern architecture.</p>
+                            <p>A sequel theme project for a tower originally built in the 1800s. We achieved this with a striking look of brutal minimalism with modern touches.</p>
                         </div>
                         <button class="button">
                             <p>See our Portfolio</p> 
@@ -94,10 +94,10 @@
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
                     style="background-image: url('./assets/home/desktop/image-hero-trinity.jpg')">
                         <div class="headings">
-                            <h1>Project Paramour</h1>
+                            <h1>Trinity Bank Tower</h1>
                         </div>
                         <div class="description">
-                            <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern architecture.</p>
+                            <p>Trinity Bank challenged us to make a concept for a 84 story building located in the middle of a city with a high earthquake frequency. For this project we used curves to blend design and stability to meet our objectives.</p>
                         </div>
                         <button class="button">
                             <p>See our Portfolio</p> 
