add image text on about section

--- a/about.html
+++ b/about.html
@@ -63,6 +63,38 @@
 
 
 
+    <!-- IMAGE + TEXT -->
+    <section class="image-text about section">
+        <div class="image-text__container">
+            <div class="headings__container">
+                <h1>Welcome</h1>
+            </div>
+            <div class="texts__container">
+                <div class="line__container">
+                    <div></div>
+                </div>
+                <div class="texts__wrapper">
+                    <h3>Our Heritage</h3>
+                    <p>Founded in 2007, we started as a trio of architects. Our complimentary skills and relentless attention to detail turned Arch into one of the most sought after boutique firms in the country.
+                    <br><br>
+                    Speciliazing in Urban Design allowed us to focus on creating exceptional structures that live in harmony with their surroundings. We consider every detail from every surrounding element to inform our designs. 
+                    <br><br>
+                    Our small team of world-class professionals provides input on every project.</p>
+                </div>
+            </div>
+            <div class="image__container">
+                <img src="./assets/about/desktop/image-heritage.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
     <!-- FOOTER -->
     <footer class="section footer">
         <div class='footer__container-desktop'>
