add leader section

--- a/about.html
+++ b/about.html
@@ -91,6 +91,63 @@
 
 
 
+    <!-- LEADERS -->
+    <section class="leaders section">
+        <div class="leaders__container">
+            <div class="headings__container">
+                <h3>The <br> Leaders</h3>
+            </div>
+            <div class="profiles__container">
+                <div class="profile__item">
+                    <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-jake.jpg');">
+                        <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
+                        <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
+                    </div>
+                    <div class="profile__texts">
+                        <p class="main">Jake Richards</p>
+                        <p class="sub">Chief Architect</p>
+                    </div>
+                </div>
+
+                <div class="profile__item">
+                    <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-thompson.jpg');">
+                        <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
+                        <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
+                    </div>
+                    <div class="profile__texts">
+                        <p class="main">Thompson Smith</p>
+                        <p class="sub">Head of Finance</p>
+                    </div>
+                </div>
+
+                <div class="profile__item">
+                    <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-jackson.jpg');">
+                        <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
+                        <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
+                    </div>
+                    <div class="profile__texts">
+                        <p class="main">Jackson Rourke</p>
+                        <p class="sub">Lead Designer</p>
+                    </div>
+                </div>
+
+                <div class="profile__item">
+                    <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-maria.jpg');">
+                        <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
+                        <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
+                    </div>
+                    <div class="profile__texts">
+                        <p class="main">Maria Simpson</p>
+                        <p class="sub">Senior Architect</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
 
 
 
