add contact form

--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,27 @@
 
 
 
+    <section class="contact-form section">
+        <div class="contact-form__container">
+            <div class="contact__title">
+                <h3>Connect <br> with us</h3>
+            </div>
+            <form class="form" action="/">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="text" placeholder="Message">
+
+                <div class="form-button">
+                    <button class='button'>
+                        <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
+                    </button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+
+
 
     
 
