fix button links

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,23 +14,23 @@
     <header class='section header'>
         <div class='header__container'>
           <div class='header__logo'>
-              <a><img src="./assets/logo.svg" /></a>
+              <a href="./index.html"><img src="./assets/logo.svg" /></a>
           </div>
 
           <div class='header__navlinks'>
               <ul class='navlinks__items'>
-                  <li class='navlinks__item'><a>Portfolio</a></li>
-                  <li class='navlinks__item'><a>About Us</a></li>
-                  <li class='navlinks__item'><a>Contact</a></li>
+                  <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                  <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                  <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
               </ul>
           </div>
 
           <div class='mobile__header-navlinks'>
               <div class='header-navlinks__wrapper'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
@@ -201,24 +201,24 @@
 
           <div class='footer-links'>
               <div class='footer__logo'>
-                  <a><img src="./assets/white-logo.svg" /></a>
+                  <a href="./index.html"><img src="./assets/white-logo.svg" /></a>
               </div>
 
               <div class='footer__navlinks'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
 
           <div class='footer__cta'>
               <a href="/">
-                  <button class='button'>
+                  <a href="./portfolio.html" class='button'>
                       <p>See Our Portfolio</p>
                       <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-                  </button>
+                  </a>
               </a>
           </div>
         </div>
@@ -229,24 +229,24 @@
         <div class='footer__container-mobile'>
 
           <div class='footer__logo'>
-              <a><img src="assets/white-logo.svg" /></a>
+              <a href="./index.html"><img src="assets/white-logo.svg" /></a>
           </div>
 
           <div class='footer-links'>
               <div class='footer__navlinks'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
 
               <div class='footer__cta'>
                   <a href="/">
-                      <button class='button'>
+                      <a href="./portfolio.html" class='button'>
                           <p>See Our Portfolio</p>
                           <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-                      </button>
+                      </a>
                   </a>
               </div>
           </div>
