--- a/about.html
+++ b/about.html
@@ -14,23 +14,23 @@
     <header class='section header'>
         <div class='header__container'>
           <div class='header__logo'>
-              <a><img src="./assets/logo.svg" /></a>
+              <a href="./index.html"><img src="./assets/logo.svg" /></a>
           </div>
 
           <div class='header__navlinks'>
               <ul class='navlinks__items'>
-                  <li class='navlinks__item'><a>Portfolio</a></li>
-                  <li class='navlinks__item'><a>About Us</a></li>
-                  <li class='navlinks__item'><a>Contact</a></li>
+                  <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                  <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                  <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
               </ul>
           </div>
 
           <div class='mobile__header-navlinks'>
               <div class='header-navlinks__wrapper'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
