--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <header class='section header'>
         <div class='header__container'>
           <div class='header__logo'>
-              <a><img src="./assets/logo.svg" /></a>
+              <a href="./index.html"><img src="./assets/logo.svg" /></a>
           </div>
 
           <div class='header__navlinks'>
               <ul class='navlinks__items'>
-                  <li class='navlinks__item'><a>Portfolio</a></li>
-                  <li class='navlinks__item'><a>About Us</a></li>
-                  <li class='navlinks__item'><a>Contact</a></li>
+                  <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                  <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                  <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
               </ul>
           </div>
 
           <div class='mobile__header-navlinks'>
               <div class='header-navlinks__wrapper'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
@@ -57,10 +57,10 @@
                         <div class="description">
                             <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern architecture.</p>
                         </div>
-                        <button class="button">
+                        <a href="./portfolio.html" class="button">
                             <p>See our Portfolio</p> 
                             <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                        </button>
+                        </a>
                     </li>
 
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
@@ -71,10 +71,10 @@
                         <div class="description">
                             <p>The Seraph Station project challenged us to design a unique station that would transport people through time. The result is a fresh and futuristic model inspired by space stations.</p>
                         </div>
-                        <button class="button">
+                        <a href="./portfolio.html" class="button">
                             <p>See our Portfolio</p> 
                             <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                        </button>
+                        </a>
                     </li>
 
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
@@ -85,10 +85,10 @@
                         <div class="description">
                             <p>A sequel theme project for a tower originally built in the 1800s. We achieved this with a striking look of brutal minimalism with modern touches.</p>
                         </div>
-                        <button class="button">
+                        <a href="./portfolio.html" class="button">
                             <p>See our Portfolio</p> 
                             <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                        </button>
+                        </a>
                     </li>
 
                     <li class="splide__slide herobanner__slide" data-splide-interval="3000"
@@ -99,10 +99,10 @@
                         <div class="description">
                             <p>Trinity Bank challenged us to make a concept for a 84 story building located in the middle of a city with a high earthquake frequency. For this project we used curves to blend design and stability to meet our objectives.</p>
                         </div>
-                        <button class="button">
+                        <a href="./portfolio.html" class="button">
                             <p>See our Portfolio</p> 
                             <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -140,10 +140,10 @@
             <div class="banner__content">
                 <h3>Small team, big ideas</h3>
                 <a href="/">
-                    <button class="button">
+                    <a href="./about.html" class="button">
                         <p>About Us</p> 
                         <img src="./assets/icons/white-icon-arrow.svg" alt="">
-                    </button>
+                    </a>
                 </a>
             </div>
         </div>
@@ -157,10 +157,10 @@
         <div class="featured__container">
             <div class="featured__top">
                 <h2>Featured</h2>
-                <button class='button'>
+                <a href="./portfolio.html" class='button'>
                     <p>See All</p>
                     <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-                </button>
+                </a>
             </div>
 
             <div class="featured__items">
@@ -211,24 +211,24 @@
 
           <div class='footer-links'>
               <div class='footer__logo'>
-                  <a><img src="./assets/white-logo.svg" /></a>
+                  <a href="./index.html"><img src="./assets/white-logo.svg" /></a>
               </div>
 
               <div class='footer__navlinks'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
           </div>
 
           <div class='footer__cta'>
               <a href="/">
-                  <button class='button'>
+                  <a href="./portfolio.html" class='button'>
                       <p>See Our Portfolio</p>
                       <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-                  </button>
+                  </a>
               </a>
           </div>
         </div>
@@ -239,24 +239,24 @@
         <div class='footer__container-mobile'>
 
           <div class='footer__logo'>
-              <a><img src="assets/white-logo.svg" /></a>
+              <a href="./index.html"><img src="assets/white-logo.svg" /></a>
           </div>
 
           <div class='footer-links'>
               <div class='footer__navlinks'>
                   <ul class='navlinks__items'>
-                      <li class='navlinks__item'><a>Portfolio</a></li>
-                      <li class='navlinks__item'><a>About Us</a></li>
-                      <li class='navlinks__item'><a>Contact</a></li>
+                      <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
+                      <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                      <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
 
               <div class='footer__cta'>
                   <a href="/">
-                      <button class='button'>
+                      <a href="./portfolio.html" class='button'>
                           <p>See Our Portfolio</p>
                           <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-                      </button>
+                      </a>
                   </a>
               </div>
           </div>
