add sticky header

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
 
     <!-- HERO -->
-    <section class="hero sections">
+    <section class="hero hero-about sections">
         <div class="hero__container">
             <div class="image__container">
                 <img src="./assets/about/desktop/image-hero.jpg" alt="">
