--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Arch Studio</title>
     <link rel="stylesheet" href="./dist/style.css">
     <link rel="stylesheet" href="./app/scss/libs/splide.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -114,7 +115,7 @@
     <!-- IMAGE + TEXT -->
     <section class="image-text section">
         <div class="image-text__container">
-            <div class="headings__container">
+            <div class="headings__container" data-aos="fade-right">
                 <h1>Welcome</h1>
             </div>
             <div class="texts__container">
@@ -164,7 +165,8 @@
             </div>
 
             <div class="featured__items">
-                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-delsol.png')">
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-delsol.png')" data-aos="fade-up"
+                data-aos-duration="1000">
                     <div class="number">
                         <h1>1</h1>
                     </div>
@@ -174,7 +176,8 @@
                     </div>
                 </a>
 
-                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-tower.png')">
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-tower.png')" data-aos="fade-up"
+                data-aos-duration="2000">
                     <div class="number">
                         <h1>2</h1>
                     </div>
@@ -184,7 +187,8 @@
                     </div>
                 </a>
 
-                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-prototype.png')">
+                <a href="#" class="item" style="background-image: url('./assets/portfolio/image-prototype.png')" data-aos="fade-up"
+                data-aos-duration="3000">
                     <div class="number">
                         <h1>3</h1>
                     </div>
@@ -269,6 +273,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./dist/script.js"></script>
     <script src="./app/js/libs/splide.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 </html>
