add animations to all pages

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <img src="./assets/contact/desktop/image-hero.jpg" alt="">
             </div>
             <div class="text__container">
-                <h1>Contact</h1>
+                <h1 data-aos="fade-left">Contact</h1>
                 <div class="text__wrapper">
                     <h3>Tell us about your project</h3>
                     <p>We’d love to hear more about your project. Please, leave a message below or give us a call. We have two offices, one in Texas and one in Tennessee. If you find yourself nearby, come say hello!</p>
