add animation duration

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <img src="./assets/about/desktop/image-hero.jpg" alt="">
             </div>
             <div class="text__container">
-                <h1 data-aos="fade-left">About</h1>
+                <h1 data-aos="fade-left" data-aos-duration="2000">About</h1>
                 <div class="text__wrapper">
                     <h3>Your team of professionals</h3>
                     <p>Our small team of world-class professionals will work with you every step of the way. Strong relationships are at the core of everything we do. This extends to the relationship our projects have with their surroundings.</p>
