--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- IMAGE + TEXT -->
     <section class="image-text section">
         <div class="image-text__container">
-            <div class="headings__container" data-aos="fade-right">
+            <div class="headings__container" data-aos="fade-right" data-aos-duration="2000">
                 <h1>Welcome</h1>
             </div>
             <div class="texts__container">
