fix links on mobile

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                 </a>
             </div>
 
-            <button class='button mobile'>
+            <a href="./portfolio.html" class='button mobile'>
                 <p>See All</p>
                 <img class='white-arrow' src="./assets/icons/white-icon-arrow.svg" />
-            </button>
+            </a>
         </div>
     </section>
 
