--- a/about.html
+++ b/about.html
@@ -98,9 +98,8 @@
             <div class="headings__container">
                 <h3>The <br> Leaders</h3>
             </div>
-            <div class="profiles__container" data-aos="fade-up"
-            data-aos-anchor-placement="center-bottom">
-                <div class="profile__item">
+            <div class="profiles__container">
+                <div class="profile__item" data-aos="fade-up">
                     <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-jake.jpg');">
                         <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
                         <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
@@ -111,7 +110,7 @@
                     </div>
                 </div>
 
-                <div class="profile__item">
+                <div class="profile__item" data-aos="fade-up">
                     <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-thompson.jpg');">
                         <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
                         <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
@@ -122,7 +121,7 @@
                     </div>
                 </div>
 
-                <div class="profile__item">
+                <div class="profile__item" data-aos="fade-up">
                     <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-jackson.jpg');">
                         <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
                         <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
@@ -133,7 +132,7 @@
                     </div>
                 </div>
 
-                <div class="profile__item">
+                <div class="profile__item" data-aos="fade-up">
                     <div class="image__container" style="background-image: url('./assets/about/desktop/avatar-maria.jpg');">
                         <img class="icon" src="./assets/icons/icon-linkedin.svg" alt="">
                         <img class="icon" src="./assets/icons/icon-twitter.svg" alt="">
