add style on links

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
           <div class='header__navlinks'>
               <ul class='navlinks__items'>
                   <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
-                  <li class='navlinks__item'><a href="./about.html">About Us</a></li>
+                  <li class='navlinks__item'><a href="./about.html" style="color: #1B1D23;">About Us</a></li>
                   <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
               </ul>
           </div>
