--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
               <ul class='navlinks__items'>
                   <li class='navlinks__item'><a href="./portfolio.html">Portfolio</a></li>
                   <li class='navlinks__item'><a href="./about.html">About Us</a></li>
-                  <li class='navlinks__item'><a href="./contact.html">Contact</a></li>
+                  <li class='navlinks__item'><a href="./contact.html" style="color: #1B1D23;">Contact</a></li>
               </ul>
           </div>
 
