--- a/portfolio.html
+++ b/portfolio.html
@@ -245,6 +245,9 @@
 
         </div>
     </footer>
+    <p class="attribution" style="text-align: center; font-size: 10px;">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+    </p>
 
 
 
